--- a/public/shop/css/style.css
+++ b/public/shop/css/style.css
@@ -633,7 +633,7 @@ li {
 }
 .detail .trade-detail .tab-nav .nav-btn {
   display: inline-block;
-  width: 5rem;
+  width: 100%;
   height: 1.25rem;
   padding: 0.03125rem 0.1875rem;
   font-size: 0.4375rem;
