--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -51,7 +51,7 @@ header {
     background-color: inherit;
     img {
       border-radius: 100%;
-      //box-shadow: 1px 1px 3px silver;
+      box-shadow: 1px 1px 3px silver;
     }
   }
   #swiper-pagination2 {
