--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -186,6 +186,13 @@ header {
   }
 }
 
+.notify {
+  left: 0;
+  width: 80%;
+  margin: 0 10%;
+  font-size: 80%;
+}
+
 body.category {
   table {
     td {
@@ -428,13 +435,14 @@ body.pay {
     }
   }
   .goods-list {
+    padding-bottom: 20px;
     .header {
       height: 1rem;
     }
     margin-bottom: 20px;
     margin-top: 0;
     .cart-item {
-      box-shadow: 0 2px 10px silver;
+      box-shadow: 0 0 7px silver;
       white-space: normal;
       overflow-wrap: break-word;
       background-color: #fff;
