--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -494,6 +494,11 @@ body.pay {
       color: red;
       button {
         padding: 0;
+        &:focus{
+          outline: none;
+          color: inherit;
+          text-decoration: none;
+        }
       }
     }
 
@@ -509,9 +514,9 @@ body.pay {
   .modal {
     $colors: (1, #E83928), (2, #F8B62C), (3, #2FA8E1);
     $bgc: #f3f3f3;
-    background-color: $bgc;
     .modal-body {
       background-color: $bgc;
+      border-radius: 5px;
     }
     .coupon-list {
       background-color: #fff;
