--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -135,6 +135,11 @@ header {
           color: #ff0000;
           font-size: 130%;
         }
+        .sold-count {
+          font-size: 40%;
+          line-height: 200%;
+          float: right;
+        }
       }
     }
   }
