--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -136,9 +136,10 @@ header {
           font-size: 130%;
         }
         .sold-count {
-          font-size: 40%;
+          font-size: 75%;
           line-height: 200%;
           float: right;
+          color: #666;
         }
       }
     }
