--- a/public/shop/css/rebuild.scss
+++ b/public/shop/css/rebuild.scss
@@ -531,6 +531,7 @@ body.pay {
       .coupon-header {
         padding: 10px 15px 0;
         border-bottom: 2px dashed $bgc;
+        color: #bbb;
       }
       .coupon-body {
         padding: 5px 15px;
@@ -775,6 +776,7 @@ body.coupon {
     .coupon-header {
       padding: 10px 15px 0;
       border-bottom: 2px dashed $bgc;
+      color: #bbb;
     }
     .coupon-body {
       padding: 5px 15px;
